<resources>
    <string name="app_name">MiniSalesManager</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El email ingresado no es valido</string>
    <string name="error_invalid_password">La contraseña es demaciado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_products">Productos</string>
    <string name="action_sales">Ventas</string>
    <string name="action_purchases">Compras</string>
    <string name="title_activity_sales">Ventas</string>
    <string name="title_activity_products">Productos</string>
    <string name="title_activity_purchases">Compras</string>
    <string name="action_add">Agregar</string>
    <string name="empty">Sin Datos</string>
    <string name="description">Descripción</string>
    <string name="barCode">Código</string>
    <string name="price">Precio</string>
    <string name="amount">Monto</string>
    <string name="error_fields_required">Los campos son requeridos</string>
    <string name="error_adding_product">No se ha podido agregar el producto requerido.</string>
    <string name="title_activity_add_product">Agregar producto</string>
    <string name="title_activity_detail_product">Producto</string>
</resources>
